# shapecheck

./: README.rst  Readme.md  pyproject.toml
shapecheck/: __init__.py  decorator.py  enabled.py
tests/: test_decorator.py  test_shapecheck.py
