[tool.poetry]
name = "shapecheck"
version = "0.1.0"
description = ""
authors = ["Ross Hemsley <rlhemsley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
torch = "^1.6.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
